Added unit test and jsdocs frameworks
Modified the build.xml to build the js docs. Added a few tests for
translation set to prove the unit test framework is working.